# ovirt-hosted-engine-setup

./: .gitignore  .isort.cfg  Makefile.am  PACKAGE-LICENSING  README  README.md  autogen.sh  automation.yaml  check.sh  cleanup.sh  configure.ac  hosted-engine.conf.in  ovirt-hosted-engine-setup.spec.in  prepare.sh  readme.appliance  readme.rollback  vm.conf.in
.copr/: Makefile
.github/workflows/: build.yml  check-patch.yml
automation/: build-artifacts-manual.environment.yaml.el7  build-artifacts-manual.environment.yaml.fc29  build-artifacts-manual.packages.fc29  build-artifacts-manual.sh  build-artifacts.environment.yaml.fc29  build-artifacts.packages  build-artifacts.packages.fc25  build-artifacts.packages.fc26  build-artifacts.repos  build-artifacts.sh  check-merged.environment.yaml.el7  check-merged.packages  check-merged.packages.el8stream  check-merged.repos  check-merged.repos.el8stream  check-merged.sh  check-patch.environment.yaml  check-patch.environment.yaml.el7  check-patch.packages  check-patch.packages.el7  check-patch.packages.el8stream  check-patch.packages.fc24  check-patch.packages.fc25  check-patch.packages.fc26  check-patch.packages.fc29  check-patch.repos.el8  check-patch.repos.el8stream  check-patch.repos.el9stream  check-patch.sh
m4/: .gitignore  ax_ln_sr.m4  ax_python_module.m4
man/: Makefile.am  hosted-engine.8  ovirt-hosted-engine-cleanup.8  ovirt-hosted-engine-setup.8
po/: .gitignore  Makevars  POTFILES.in  pt_BR.po
src/: Makefile.am
src/ansible/: Makefile.am  auth_sso.yml  bootstrap_local_vm.yml  clean_environment.yml  clean_localvm_dir.yml  create_storage_domain.yml  create_target_vm.yml  fc_getdevices.yml  fetch_engine_logs.yml  final_clean.yml  get_local_vm_disk_path.yml  get_network_interfaces.yml  hosted_engine.yml  hosted_engine_iscsi.yml  initial_clean.yml  install_appliance.yml.in  iscsi_discover.yml  iscsi_getdevices.yml  libvirt_default_net_ipv6_tasks.yml  pg_scl.yml  restore_backup.yml  trigger_role.yml  validate_hostname_tasks.yml  validate_hostnames.yml
src/ansible/callback_plugins/: 1_otopi_json.py  2_ovirt_logger.py  Makefile.am
src/ansible/hooks/: Makefile.am
src/ansible/hooks/after_setup/: Makefile.am  add_host_storage_domain.yml  after_setup.yml.example
src/ansible/hooks/enginevm_after_engine_setup/: Makefile.am  enginevm_after_engine_setup.yml.example
src/ansible/hooks/enginevm_before_engine_setup/: Makefile.am  enginevm_before_engine_setup.yml.example
src/ansible/hooks/inventory/: Makefile.am
src/ansible/module_utils/: Makefile.am  ovirt.py
src/ansible/templates/: Makefile.am  broker.conf.j2  fhanswers.conf.j2  heanswers.conf.j2  hosted-engine.conf.j2  ifcfg-eth0-dhcp.j2  ifcfg-eth0-static-ipv6.j2  ifcfg-eth0-static.j2  meta-data.j2  network-config-dhcp6.j2  user-data.j2  version.j2  vm.conf.j2
src/ansible/test_plugins/: Makefile.am
src/ansible/vars/: vars.yml  vars_iscsi.yml
src/he_ansible/: Makefile.am  ansible.cfg  constants.py  trigger_role.yml
src/he_ansible/callback_plugins/: 1_otopi_json.py  2_ovirt_logger.py  Makefile.am
src/ovirt_hosted_engine_setup/: Makefile.am  __init__.py  ansible_utils.py  appliance_esetup.py  check_liveliness.py  config.py.in  connect_storage_server.py  constants.py  disconnect_storage_server.py  domains.py  engineapi.py  get_shared_config.py  heconflib.py  mixins.py  ohttpshandler.py  pkissh.py  reinitialize_lockspace.py  set_maintenance.py  set_shared_config.py  tasks.py  util.py  vds_info.py  vdsm_helper.py  vm_status.py  vm_test.conf  vmconf.py  vmconf_test.py
src/ovirt_hosted_engine_setup/ovf/: CIM_ResourceAllocationSettingData.xsd  CIM_VirtualSystemSettingData.xsd  Makefile.am  __init__.py  ovfenvelope.py
src/plugins/: Makefile.am
src/plugins/gr-he-ansiblesetup/: Makefile.am
src/plugins/gr-he-ansiblesetup/core/: Makefile.am  __init__.py  misc.py  storage_domain.py  target_vm.py
src/plugins/gr-he-common/: Makefile.am
src/plugins/gr-he-common/core/: Makefile.am  __init__.py  answerfile.py  ha_notifications.py  misc.py  offlinepackager.py  remote_answerfile.py  shell.py  titles.py  vdsmconf.py
src/plugins/gr-he-common/engine/: Makefile.am  __init__.py  ca.py  fqdn.py  health.py
src/plugins/gr-he-common/network/: Makefile.am  __init__.py  bridge.py  gateway.py  network_check.py
src/plugins/gr-he-common/sanlock/: Makefile.am  __init__.py  lockspace.py
src/plugins/gr-he-common/vm/: Makefile.am  __init__.py  boot_disk.py  cloud_init.py  cpu.py  image.py  mac.py  machine.py  memory.py  misc.py
src/plugins/gr-he-rollbackupgrade/: Makefile.am
src/plugins/gr-he-rollbackupgrade/core/: Makefile.am  __init__.py  misc.py
src/plugins/gr-he-setup/: Makefile.am
src/plugins/gr-he-setup/core/: Makefile.am  __init__.py  answerfile.py  conf.py  misc.py  preview.py  shell.py  titles.py
src/plugins/gr-he-setup/engine/: Makefile.am  add_host.py  fqdn.py  os_install.py
src/plugins/gr-he-setup/ha/: Makefile.am  __init__.py  ha_notifications.py  ha_services.py
src/plugins/gr-he-setup/libvirt/: Makefile.am  __init__.py  configureqemu.py
src/plugins/gr-he-setup/network/: Makefile.am  __init__.py  bridge.py  firewall.py  firewall_manager.py  gateway.py  iptables.py
src/plugins/gr-he-setup/pki/: Makefile.am  __init__.py  vdsmpki.py
src/plugins/gr-he-setup/sanlock/: Makefile.am
src/plugins/gr-he-setup/storage/: Makefile.am  __init__.py  blockd.py  heconf.py  nfs.py  storage.py
src/plugins/gr-he-setup/system/: Makefile.am  __init__.py  packages.py  sshd.py  vdsmenv.py
src/plugins/ovirt-hosted-engine-setup/: Makefile.am
src/plugins/ovirt-hosted-engine-setup/network/: Makefile.am  __init__.py  bridge.py  firewall.py  firewall_manager.py  gateway.py  iptables.py
src/plugins/ovirt-hosted-engine-upgrade-appliance/: Makefile.am
src/vdsm_hooks/: Makefile.am  hostedengine.py  hostedengine.py.in
templates/: Makefile.am  hc.answer.conf.in  hosted-cockpit.xml.in  hosted-console.xml.in  hosted-engine.conf.in  hosted-gluster.xml.in  iptables.default.in  vm.conf.in
tests/: Makefile.am  answers
tests/ansible/playbooks/: test_filtering.yml
(+100 files in other folders)
